<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.18">
  <DUT Name="ST_CyclicEventDetection" Id="{572b5e63-3823-479f-8ebe-a6103ff37c23}">
    <Declaration><![CDATA[TYPE ST_CyclicEventDetection :
STRUCT
  id: INT;
  submitted_in_last_invocation: BIT;
END_STRUCT
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>